src/plugins/clangcodemodel/clangassistproposalitem.h
@@ -47,6 +47,7 @@ public:
     QString text() const final;
     QIcon icon() const final;
     QString detail() const final;
+    bool isKeyword() const final;
     bool isSnippet() const final;
     bool isValid() const final;
     quint64 hash() const final;
